# libbrahe

./: AUTHORS  Brahe.sln  ChangeLog  LICENSE.NON-FREE  LicenseClosedSource.txt  Makefile.am  Makefile.in  configure  configure.ac  libbrahe.pc.in  libbrahe_1.2.0.orig.tar.gz.delta  libbrahe_1.2.0.orig.tar.gz.id  libbrahe_1.3.2.orig.tar.gz.delta  libbrahe_1.3.2.orig.tar.gz.id
BraheDLL/: BraheDLL.vcxproj  BraheDLL.vcxproj.filters  brahe.def  brahe.rc  resource.h
BraheTest/: BraheTest.cpp  BraheTest.vcxproj  BraheTest.vcxproj.filters  stdafx.cpp
debian/: README.Debian  changelog  control  copyright  docs  libbrahe-1.2-2.install  libbrahe-1.3-3.install  libbrahe-dev.dirs  libbrahe-dev.install  libbrahe-dev.links  libbrahe-dev.links.in  rules  shlibs  watch
debian/patches/: foreign
debian/source/: patch-header
docs/: Makefile.in  libbrahe_foot.html  libbrahe_head.html
src/: Makefile.am  Makefile.in  gcflcm.c  logtools.c  mathtools.h  prettyint.c  prng.c  prng.h  rounding.c  simplefft.c  sinusoid.c  statistics.c  trig.c
test/: Makefile.am  Makefile.in  brahe_test_fft.c  brahe_test_gcflcm.c  brahe_test_pretty.c  brahe_test_prng.c  brahe_test_rounding.c  brahe_test_trig.c
