bin_PROGRAMS = brahe_test_prng brahe_test_trig brahe_test_rounding brahe_test_gcflcm brahe_test_fft

brahe_test_prng_SOURCES = brahe_test_prng.c
brahe_test_trig_SOURCES = brahe_test_trig.c
brahe_test_rounding_SOURCES = brahe_test_rounding.c
brahe_test_gcflcm_SOURCES = brahe_test_gcflcm.c
brahe_test_fft_SOURCES = brahe_test_fft.c

LIBS = -L../src -lbrahe -lm -lrt
AM_CFLAGS = -std=gnu99 -pedantic -Wall -Wno-format
